--- a/Report-2.Rmd
+++ b/Report-2.Rmd
@@ -5,6 +5,7 @@ date: "`r Sys.Date()`"
 mainfont: Charter
 fontsize: 11pt
 bibliography: references.bib
+csl: apa.csl
 output: 
   bookdown::pdf_document2
 ---
@@ -40,23 +41,57 @@ set.seed(1112494378)
 theme_set(theme_tufte())
 ```
 
+# Data {#data}
+
+## Source {#source}
+
+In the empirical exercise I use uncertainty indexes from distinct sources for the USA economy. Specifically, the index are (following the non-asset-market indexes proposed in @dattlondsunbeltferriacojahaligiud:2017):
+
+- The Economic Policy Uncertainty Index (EPU) developed by @bakebloodavi:2016. This Index is available from January 1985 through September 2019 in the authors website <https://www.policyuncertainty.com>. 
+- The Monetary Policy Uncertainty Index (MPU) developed by @bakebloodavi:2016; henceforth BBD U.S. MPU. This Index is available from January 1985 through September 2019 in the authors website <https://www.policyuncertainty.com>. Likewise, the authors construct two variants  of them monthly MPU Index for the United States by using two different sets of newspapers.
+- The Monetary Policy Uncertainty Index (MPU) developed by @hustrogesun:2019.
+- The Geopolitical Risk Index developed by @caldiaco:2018.
+- The macroeconomic uncertainty index developed by @juraludvng:2015.
+
+In [Estimates on the Impact of Non--Asset-Market Uncertainty Shocks] I estimate a vector auto-regressive model. The data for this exercise were taken from the Federal Reserve Bank of Saint Louis (FRED: <https://fred.stlouisfed.org/>), Yahoo Finance (<https://finance.yahoo.com/>) and Quandl (<https://www.quandl.com/>) webpages through the API of each of them. Specifically, I use the industrial production index in 2012 prices; the total number of employees in the non-farm sector in thousand of persons; real personal consumption expenditures in 2012 prices; the personal consumption expenditures price index in 2012 prices; the average hourly earnings of production and non-supervisory employees for all-sectors in dollars per hour; average weekly hours of production and non-supervisory employees for all-sectors in hours; effective federal funds rate in percent and M2 money stock in billions of dollars from FRED. Likewise, I use the new order index from Quandl and the Standard and Poor's 500 index from Yahoo Finance. 
+
+Also, I estimate a model for manufacturing sector in [Eight-variable VAR]. In detail, I use the industrial production index in manufacturing known as NAICS in 2012 prices, total number of employees in manufacturing in thousand of persons, average weekly hours of production and non-supervisory employees in manufacturing in hours, consumer price index (all urban consumers) in 1982-1984 prices, average hourly earnings of production and non-supervisory employees in manufacturing from FRED, and the federal funds rate and Standard and Poor's 500 index defined as above. Finally, the sample spans from January 1985 to July 2017, which is the longest period possible using these series.
+
+## Seasonality {#seasonality}
+
+All series were taken seasonally adjusted except the federal funds rate and the Standard and Poor's 500 index but them doesn't exhibit apparent seasonal components. Nevertheless, it is good practice to verify that the series are indeed free of seasonality [@kililutk:2017]. Therefore, I regress each series on seasonal dummies and conduct a Wald test for the inclusion of regressors. There aren't seasonality in the series. The absence of seasonal components allow to avoid the overparameterization of the VARs models.
+
+## Transformations {#transformations}
+
+### Basic {#basic}
+
+All series of which units are measured in prices need to be given the $100 \times \log()$ treatment but the M2 money stock which enter as continuously compounded annual rate of change ($[(\ln(x_{t}) - \ln(x_{t - 1})) \times 100] \times 12$). 
+
+### Detrend {#detrend}
+
+For detrend the variables was used the alternative proposed by Hamilton [-@hamilton:2018] which avoid the shortcomings of Hodrick-Prescott (HP) filter, i.e., spurious dynamic relations that have no basis in the underlying data-generating process. The method consist of a regression of the variable at date $t + h$ on the twelve most recent values as of date $t$^[The original paper talks about quarterly data but because I use monthly data is necessary adjust the seasonally parameter to allow one year (as do the original paper with four quarters).]. The $h$ parameter is suggest to be a look-ahead period of two years which with monthly data are 24 time stamps. In summary, the model fitted to each series is an auto-regressive AR(12) model, dependent on $t + 24$ look-ahead. This is expressed more concretely by:
+
+\begin{equation}
+  y_{t+24} = \beta_{0} + \beta_{1}y_{t} + \beta_{2}y_{t - 1} + \cdots + \beta_{8}y_{t - 7} + v_{t + 24}
+  (\#eq:hamilton-basic)
+\end{equation}
+
+Which can be rewritten as:
+
+\begin{equation}
+  y_{t} = \beta_{0} + \beta_{1}y_{t - 24} + \beta_{2}y_{t - 25} + \cdots + \beta_{8}y_{t - 32} + v_{t}
+  (\#eq:hamilton-final)
+\end{equation}
+
+Therefore, all variables are detrended with Hamilton method in the baseline estimations.
+
 # Non-Asset-Market Index {#non-asset-market-index}
 
-## Data
-
-In the empirical exercise I use uncertainty indexes from distinct sources for the USA economy. Specifically, the index are:
-
-- The Economic Policy Uncertainty Index (EPU) developed by @Baker_2016. This Index is available from January 1985 through September 2019 in the authors website [@bakebloodavi:2019]. 
-- The Monetary Policy Uncertainty Index (MPU) developed by @Baker_2016; henceforth BBD U.S. MPU. This Index is available from January 1985 through September 2019 in the authors website [@bakebloodavi:2019]. Likewise, the authors construct two variants  of them monthly MPU Index for the United States by using two different sets of newspapers.
-- The Monetary Policy Uncertainty Index (MPU) developed by 
-
-## PCA
+## DFM
 
 ```{r Import_Uncertainty}
-source("./R/Import_Uncertainty.R")
+source("./R/Import-Uncertainty.R")
 ```
-
-The first thing to do is merge the different uncertainty indexes by a common date. The minimum range available is to July 2017.
 
 ```{r uncertainty.indexes, message = FALSE}
 uncertainty.indexes <- list(
@@ -71,46 +106,7 @@ uncertainty.indexes <- list(
   reduce(inner_join)
 ```
 
-```{r scree.plot, include = FALSE}
-scree.plot <- psych::fa.parallel(
-  uncertainty.indexes[, -c(1, 2, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18)],
-  fa = "pc",
-  n.iter = 1000,
-  plot = FALSE
-)
-```
-
-Although the goal is construct one economic index from the underlying series, it is worthy show the number of components that satisfy several criteria. Each component is associated with an eigenvalue of the correlation matrix of the the raw data. The first principal component (PC) is associated with the largest eigenvalue, the second PC with the second-largest eigenvalue, and so on. The Kaiser-Harris criterion suggests retaining components with eigenvalues greater than 1 unit. Components with eigenvalues less than 1 explain less variance than contained in a single variable. In the Cattel Scree test, the eigenvalues are plotted against their component numbers . Finally, In Parallel Analysis [@Hayton_2004] are run simulations, extracting eigenvalues from random data matrices of the same size as the original matrix of data. 
-
-The figure \@ref(fig:scree) displays the scree test based on the observed eigenvalues (as column bars), the mean eigenvalues derived from 1000 random data matrices (as dashed line), and the eigenvalues greater than 1 (as a horizontal line at $y = 1$). Only the first PC is significantly greater than 1. Likewise, the plot shows a bend and only the PC above this sharp break is retained. Lastly, only the first PC is larger than the average corresponding eigenvalues from a set of random matrices. In summary, all three criteria suggest that a single component is appropriate for summarizing this dataset.
-
-```{r scree, cache = TRUE, fig.cap = "Criteria Kaiser-Harris, Cattell Scree and Parallel Analysis suggest one component"}
-tibble(
-  CN = 1:6, EV = scree.plot[["pc.values"]], SIM = scree.plot[["pc.sim"]]
-) %>% 
-  ggplot(aes(CN, EV)) +
-    geom_hline(aes(yintercept = 1)) +
-    geom_col(width = 0.25) +
-    geom_line(aes(CN, SIM), linetype = "dashed") +
-    scale_x_continuous(breaks = 1:6) +
-    scale_y_continuous(breaks = seq(0, 3, by = 0.5)) +
-    labs(
-      caption = "Source: Own calculations",
-      x = "Component number",
-      y = "Eigen values of principal components"
-    )
-```
-
-## Bai and Ng
-
-```{r}
-#POET::POETKhat(uncertainty.indexes[, -c(1, 2, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18)])
-```
-
-
-## DFM
-
-```{r dynamic.factors, message = FALSE}
+```{r dynamic.factors, include = FALSE}
 dynamic.factors <- dynfactoR::dfm(
   uncertainty.indexes[, -c(1, 2, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18)], 
   1, 
@@ -126,20 +122,63 @@ DFM.base <- tibble(
 )
 ```
 
-# Plot Non-Asset-Market Index
 
-```{r}
-# DFM.base %>% 
-#   ggplot(aes(Date, PCA)) +
-#     geom_line() 
-#     #theme_tq()
+<!-- ## Bai and Ng -->
+
+<!-- # ```{r} -->
+<!-- # #POET::POETKhat(uncertainty.indexes[, -c(1, 2, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18)]) -->
+<!-- # ``` -->
+
+### PCA
+
+```{r scree.plot, include = FALSE}
+scree.plot <- psych::fa.parallel(
+  uncertainty.indexes[, -c(1, 2, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18)],
+  fa = "pc",
+  n.iter = 100,
+  plot = FALSE
+)
 ```
 
-# VAR Estimates on the Impact of Uncertainty Shocks
+The first estimator used for construct the index is the Principal Component Estimator. Its properties are well discussed in @stocwats:2002. Because there isn't missing data the estimator is suitable.
 
-With the objective of estimate a VAR model were necessary several series. These series were obtained from the Federal Reserve Saint Louis (FRED), Yahoo Finance and Quandl webpages through the API of each of them. Specifically, I use the industrial production index in 2012 prices; the total number of employees in the non-farm sector in thousand of persons; real personal consumption expenditures in 2012 prices; the personal consumption expenditures price index in 2012 prices; the average hourly earnings of production and nonsupervisory employees for all-sectors in dollars per hour; average weekly hours of production and non-supervisory employees for all-sectors in hours; effective Federal Funds Rate in percent and M2 money stock in billions of dollars from FRED. Likewise, I use the new order index from Quandl and the Standard and Poor's 500 index from Yahoo Finance. All series were taken seasonally adjusted except the Federal Funds Rate and the Standard and Poor's 500 index but them doesn't exhibit seasonal components^[Nevertheless, it is good practice to verify that the series are indeed free of seasonality. Therefore, I regress each series on seasonal dummies and conduct a Wald test for the inclusion of regressors. There aren't seasonality in the series.]. The absence of seasonal components allow to avoid the overparameterization of the VAR model. 
+Although the goal is construct one economic index from the underlying series, it is worthy show the number of components that satisfy several criteria. Each component is associated with an eigenvalue of the correlation matrix of the the raw data. The first principal component (PC) is associated with the largest eigenvalue, the second PC with the second-largest eigenvalue, and so on. The Kaiser-Harris criterion suggests retaining components with eigenvalues greater than 1 unit. Components with eigenvalues less than 1 explain less variance than contained in a single variable. In the Cattel Scree test, the eigenvalues are plotted against their component numbers . Finally, In Parallel Analysis [@haytallescar:2004] are run simulations, extracting eigenvalues from random data matrices of the same size as the original matrix of data. 
 
-All series of which units are measured in prices need to be given the $100 \times \log()$ treatment but the M2 money stock which enter as continuously compounded annual rate of change^[$[(\ln(x_{t}) - \ln(x_{t - 1})) \times 100] \times 12$]. All variables are Hamilton [@hamilton:2018] detrended (with to look-ahead period of 2 years and seasonality of twelve months) in the baseline estimations.
+The figure \@ref(fig:scree) displays the scree test based on the observed eigenvalues (as dashed line and points), the mean eigenvalues derived from 1000 random data matrices (as dotdashed line), and the eigenvalues greater than 1 (as a horizontal line at $y = 1$). Only the first PC is significantly greater than 1. Likewise, the plot shows a bend and only the PC above this sharp break is retained. Lastly, only the first PC is larger than the average corresponding eigenvalues from a set of random matrices. In summary, all three criteria suggest that a single component is appropriate for summarizing this dataset.
+
+(ref:scree) **Scree Plot**: The Figure shows a scree plot (the dashed line), eigenvalues greater than 1 criteria (solid line), and parallel analysis with 1000 simulations (dot-dashed line) suggest retaining a single component.
+
+```{r scree, cache = TRUE, fig.cap = "(ref:scree)"}
+tibble(
+  CN = 1:6, EV = scree.plot[["pc.values"]], SIM = scree.plot[["pc.sim"]]
+) %>% 
+  ggplot(aes(CN, EV)) +
+    geom_hline(aes(yintercept = 1), size = 0.125) +
+    geom_line(aes(CN, SIM), linetype = "dotdash", colour = "darkred") +
+    geom_line(aes(CN, EV), linetype = "dashed", colour = "steelblue") +
+    geom_point(aes(CN, EV), colour = "steelblue") +
+    scale_x_continuous(breaks = 1:6) +
+    scale_y_continuous(breaks = seq(0, 3, by = 0.5)) +
+    labs(
+      caption = "Source: Own calculations",
+      x = "Component number",
+      y = "Eigen values of principal components"
+    )
+```
+
+### Two-step 
+
+The sconed estimator used is the Two-Step developed by @dozgianreic:2011. This methods uses PCA estimates and runs them through Kalman filter.
+
+### QML
+
+The third estimator used is the Quasi-Maximum Likelihood by @dozgianreic:2012. Similar to two-setp estimator, however Kalman filtering procedure is iterated until Expectation-Maximization (EM) algorithm converges.
+
+All three estimators gives similar results, from now I use for analysis the index obtained from the Quasi-Maximum Likelihood method.
+
+# VAR {#var}
+
+## Estimates on the Impact of Non--Asset-Market Uncertainty Shocks {#var-baseline}
 
 ```{r Import_USA_Data}
 source("./R/Import_USA_Data.R")
@@ -167,10 +206,6 @@ VAR.baseline <- vars::VAR(
   lag.max = 12,
   ic = "SC"
 )
-```
-
-```{r roots.baseline, message = FALSE}
-roots.baseline <- vars::roots(VAR.baseline)
 ```
 
 ```{r irf.baseline, warning = FALSE}
@@ -214,7 +249,7 @@ matrix.irf <- list(matrix.response, matrix.lower, matrix.upper) %>%
   )
 ```
 
-(ref:irf-baseline-plot) **Economic Dynamics under Uncertainty**: The Figure shows the reaction of the variables to an unexpected increment of uncertainty. The estimation period runs from January 1985 to July 2017. The axes are in percentages but the Federal Funds Rate and Employment are in basic points. Confidence bands (86 \%) are calculated using bootstrapping techniques as explained in @efrotibs:1993.
+(ref:irf-baseline-plot) **Economic Dynamics under Uncertainty**: The Figure shows the reaction of the variables to an unexpected increment of non-asset-market uncertainty, based on 1000 replications. The estimation period runs from January 1985 to July 2017. The axes are in percentages but the federal funds rate and employment are in basic points. Confidence bands (86 \%) are calculated using bootstrapping techniques as explained in @efrotibs:1993.
 
 ```{r irf-baseline-plot, cache = TRUE, fig.asp = 1.236, fig.cap = "(ref:irf-baseline-plot)"}
 matrix.irf %>% 
@@ -227,9 +262,9 @@ matrix.irf %>%
     "Stock Market Index"
   )) %>% 
   ggplot(aes(Months, Response)) +
-    geom_hline(aes(yintercept = 0)) +
+    geom_hline(aes(yintercept = 0), size = 0.125) +
     geom_ribbon(aes(ymin = Lower, ymax = Upper), fill = "steelblue", alpha = 0.125) +
-    geom_line(colour = "blue", linetype = "dashed") +
+    geom_line(colour = "steelblue", linetype = "dashed") +
     scale_x_continuous(breaks = seq(0, 60, by = 10)) + 
     facet_wrap(
       ~ Variable, 
@@ -243,9 +278,150 @@ matrix.irf %>%
     )
 ```
 
-## Robustness
+## Robustness {#robustness}
 
-### Alternative sets and orderings of variables
+### Eight-variable VAR {#var-eight}
+
+```{r VAR.medium}
+VAR.medium <- vars::VAR(
+  VAR.data %>% select(
+    Production.NAICS.log.cycle, 
+    Employment.manu.lin.cycle, 
+    Labor.manu.lin.cycle,
+    Prices.urban.log.cycle,
+    Wages.manu.log.cycle,
+    FederalFundsRate.lin.cycle,
+    StockMarketIndex.log.cycle,
+    PCA
+  ), 
+  lag.max = 12, 
+  ic = "SC"
+)
+```
+
+```{r irf.medium.production, warning = FALSE}
+irf.medium.production <- vars::irf(
+  VAR.medium, 
+  impulse = c("PCA", "StockMarketIndex.log.cycle"), 
+  response = "Production.NAICS.log.cycle",
+  n.ahead = 60, 
+  runs = 100, 
+  ci = 0.86
+)
+```
+
+```{r irf.medium.production.matrix}
+data.plot <- tibble(
+  Months = 0:60,
+  `Response to a uncertainty shock` = as.vector(
+    irf.medium.production[["irf"]][["PCA"]]
+  ),
+  PCA.lower = as.vector(irf.medium.production[["Lower"]][["PCA"]]),
+  PCA.upper = as.vector(irf.medium.production[["Upper"]][["PCA"]]),
+  `Response to a stock market shock` = -as.vector(
+    irf.medium.production[["irf"]][["StockMarketIndex.log.cycle"]]
+  )
+) %>% 
+  gather(
+    `Response to a uncertainty shock`, 
+    `Response to a stock market shock`, 
+    key = "Imp", 
+    value = "Res"
+  )
+```
+
+(ref:production-medium) **Decline of production under uncertainty**: The Figure shows the reaction of industrial production in manufacturing to an unexpected increment of non--asset-market uncertainty and to an unexpected fall the stock-market, based on 1000 replications. The estimation period runs from January 1985 to July 2017. The axe is in percentage. Confidence bands (86 \%) are calculated using bootstrapping techniques as explained in @efrotibs:1993.
+
+```{r production-medium, cache = TRUE, fig.cap = "(ref:production-medium)"}
+data.plot %>% 
+  ggplot(aes(Months, Res)) +
+    geom_hline(aes(yintercept = 0), size = 0.125) +
+    geom_ribbon(
+      data = data.plot %>% filter(Imp == "Response to a uncertainty shock"), 
+      aes(ymin = PCA.lower, ymax = PCA.upper), 
+      fill = "steelblue", 
+      alpha = 0.125
+    ) +
+    geom_line(aes(colour = Imp, linetype = Imp)) +
+    scale_x_continuous(breaks = seq(0, 60, by = 5)) +
+    scale_y_continuous(breaks = seq(0.20, -0.60, by = -0.05)) +
+    scale_color_manual(values = c("darkred", "steelblue")) +
+    scale_linetype_manual(values = c("dotted", "dashed")) +
+    labs(
+      caption = "Source: Own calculations",
+      x = "Months after the shock",
+      y = "% impact on production",
+      colour = "",
+      linetype = ""
+    ) +
+    theme(legend.position = "bottom")
+```
+
+```{r irf.medium.employment, warning = FALSE}
+irf.medium.employment <- vars::irf(
+  VAR.medium, 
+  impulse = c("PCA", "StockMarketIndex.log.cycle"), 
+  response = "Employment.manu.lin.cycle",
+  n.ahead = 60, 
+  runs = 100, 
+  ci = 0.86
+)
+```
+
+```{r irf.medium.employment.matrix}
+data.plot <- tibble(
+  Months = 0:60,
+  `Response to a uncertainty shock` = as.vector(
+    irf.medium.employment[["irf"]][["PCA"]]
+  ),
+  PCA.lower = as.vector(irf.medium.employment[["Lower"]][["PCA"]]),
+  PCA.upper = as.vector(irf.medium.employment[["Upper"]][["PCA"]]),
+  `Response to a stock market shock` = -as.vector(
+    irf.medium.employment[["irf"]][["StockMarketIndex.log.cycle"]]
+  )
+) %>% 
+  gather(
+    `Response to a uncertainty shock`, 
+    `Response to a stock market shock`, 
+    key = "Imp", 
+    value = "Res"
+  )
+```
+
+(ref:employment-medium) **Decline of employment under uncertainty**: The Figure shows the reaction of employment in manufacturing to an unexpected increment of non-asset-market uncertainty and to an unexpected fall the stock-market, based on 1000 replications. The estimation period runs from January 1985 to July 2017. The axe is in percentage. Confidence bands (86 \%) are calculated using bootstrapping techniques as explained in @efrotibs:1993.
+
+```{r employment-medium, cache = TRUE, fig.cap = "(ref:employment-medium)"}
+data.plot %>% 
+  ggplot(aes(Months, Res)) +
+    geom_hline(aes(yintercept = 0), size = 0.125) +
+    geom_ribbon(
+      data = data.plot %>% filter(Imp == "Response to a uncertainty shock"), 
+      aes(ymin = PCA.lower, ymax = PCA.upper), 
+      fill = "steelblue", 
+      alpha = 0.125
+    ) +
+    geom_line(aes(colour = Imp, linetype = Imp)) +
+    scale_x_continuous(breaks = seq(0, 60, by = 5)) +
+    scale_y_continuous(breaks = seq(20, -60, by = -10)) +
+    scale_color_manual(values = c("darkred", "steelblue")) +
+    scale_linetype_manual(values = c("dotted", "dashed")) +
+    labs(
+      caption = "Source: Own calculations",
+      x = "Months after the shock",
+      y = "Impact on employment",
+      colour = "",
+      linetype = ""
+    ) +
+    theme(legend.position = "bottom")
+```
+
+The set the variables in the estimation are industrial production in manufacturing, employment in manufacturing, average hours in manufacturing, consumer price index, average hourly earnings for production workers in manufacturing, federal funds rate, stock-market index and non-asset-market uncertainty.
+
+To identify uncertainty shocks, a Cholesky ordering is used with production ordered first, followed by employment, labor, prices, wages, federal funds rate, stock market index and non-market uncertainty ordered last. The ordering is based on the assumptions that shocks instantaneously influence the stock market, then prices (wages, the consumer price index (CPI), and interest rates), and finally quantities (hours, employment, and output).
+
+Figure \@ref(fig:production-medium) plots the impulse response function of industrial production (the dashed line) to a non-market uncertainty shock. Industrial production displays a fall of around 0.30 \% within 12 months. The confidence bands (shaded area) are plotted around this, highlighting that this drop is statistically significant. For comparison to a first-moment shock, the response to a fall the stock-market is also plotted (dotted line) displaying a much more large drop over the subsequent 2 years. Figure \@ref(fig:employment-medium) repeats the same exercise for employment, displaying a similar drop in activity.
+
+### Alternative sets and orderings of variables {#sets-order}
 
 ```{r VAR.trivariate}
 VAR.trivariate <- vars::VAR(
@@ -320,7 +496,7 @@ irf.quadvariate.reverse <- vars::irf(
 
 In Figure \@ref(fig:robustness) the VAR is reestimated using a simple trivariate VAR (industrial production, employment and non-asset-market uncertainty index only) also display a drop (dashed line). The "quadvariate" VAR (industrial production, employment, stock-market and non-asset-market uncertainty index only) also displays a similar drop (solid line), as does the quadvariate VAR with the variable ordering reversed (dotted line). Hence the response of industrial production to a uncertainty shock appears robust to both the basic selection and the ordering of variables.
 
-(ref:robustness) **VAR model is robust to different variable sets and ordering**: The Figure shows the reaction of the industrial production to an unexpected increment of uncertainty. The estimation period runs from January 1985 to July 2017. The axe is in percentage. The models are defined as: trivariate (industrial production, employment and non-asset-market uncertainty shocks), Quadvariate (industrial production, employment, stock-market and non-asset-market uncertainty shocks) and Quadvariate in reverse (non-asset-market uncertainty shocks, stock-market, employment and industrial production).
+(ref:robustness) **VAR model is robust to different variable sets and ordering**: The Figure shows the reaction of the industrial production to an unexpected increment of non-asset-market uncertainty. The estimation period runs from January 1985 to July 2017. The axe is in percentage. The models are defined as: trivariate (industrial production, employment and non-asset-market uncertainty shocks), Quadvariate (industrial production, employment, stock-market and non-asset-market uncertainty shocks) and Quadvariate in reverse (non-asset-market uncertainty shocks, stock-market, employment and industrial production).
 
 ```{r robustness, cache = TRUE, fig.cap = "(ref:robustness)"}
 tibble(
@@ -335,7 +511,7 @@ tibble(
     value = "Shock"
   ) %>% 
   ggplot(aes(Months, Shock)) +
-    geom_hline(aes(yintercept = 0)) +
+    geom_hline(aes(yintercept = 0), size = 0.125) +
     geom_line(aes(colour = VAR, linetype = VAR)) +
     scale_x_continuous(breaks = seq(0, 60, by = 5)) +
     scale_y_continuous(breaks = seq(0, -0.40, by = -0.05)) +
@@ -345,97 +521,10 @@ tibble(
       y = "% impact on production",
       colour = "",
       linetype = ""
-    )
+    ) +
+    theme(legend.position = "bottom")
 ```
 
-### Eight-variable VAR
-
-```{r VAR.medium}
-VAR.medium <- vars::VAR(
-  VAR.data %>% select(
-    Production.NAICS.log.cycle, 
-    Employment.manu.lin.cycle, 
-    Labor.manu.lin.cycle,
-    Prices.urban.log.cycle,
-    Wages.manu.log.cycle,
-    FederalFundsRate.lin.cycle,
-    StockMarketIndex.log.cycle,
-    PCA
-  ), 
-  lag.max = 12, 
-  ic = "SC"
-)
-```
-
-```{r irf.medium.production, warning = FALSE}
-irf.medium.production <- vars::irf(
-  VAR.medium, 
-  impulse = c("PCA", "StockMarketIndex.log.cycle"), 
-  response = "Production.NAICS.log.cycle",
-  n.ahead = 60, 
-  runs = 100, 
-  ci = 0.86
-)
-```
-
-```{r production-medium, cache = TRUE, fig.cap = "Decline of production under uncertainty"}
-tibble(
-  Months = 0:60,
-  PCA = irf.medium.production[["irf"]][["PCA"]],
-  PCA.lower = irf.medium.production[["Lower"]][["PCA"]],
-  PCA.upper = irf.medium.production[["Upper"]][["PCA"]],
-  Stock = -irf.medium.production[["irf"]][["StockMarketIndex.log.cycle"]]
-) %>% 
-  pivot_longer(PCA, Stock, names_to = "Imp", values_to = "Res") %>% 
-  ggplot(aes(Months, Res)) +
-    geom_hline(aes(yintercept = 0)) +
-    geom_ribbon(aes(ymin = PCA.lower, ymax = PCA.upper), fill = "steelblue", alpha = 0.125) +
-    geom_line(colour = "blue", linetype = "dashed") +
-    geom_line(aes(Months, Stock), colour = "darkred", linetype = "dotted") + 
-    scale_x_continuous(breaks = seq(0, 60, by = 5)) +
-    scale_y_continuous(breaks = seq(0.20, -0.60, by = -0.05)) +
-    labs(
-      caption = "Source: Own calculations",
-      x = "Months after the shock",
-      y = "% impact on production"
-    )
-```
-
-
-
-
-
-
-```{r irf.medium.employment, warning = FALSE}
-irf.medium.employment <- vars::irf(
-  VAR.medium, 
-  impulse = "PCA", 
-  response = "Employment.manu.lin.cycle",
-  n.ahead = 60, 
-  runs = 100, 
-  ci = 0.86
-)
-```
-
-```{r employment-medium, cache = TRUE, fig.cap = "Decline of employment under uncertainty"}
-tibble(
-  Months = 0:60,
-  PCA = irf.medium.employment[["irf"]][["PCA"]],
-  PCA.lower = irf.medium.employment[["Lower"]][["PCA"]],
-  PCA.upper = irf.medium.employment[["Upper"]][["PCA"]]
-) %>% 
-  ggplot(aes(Months, PCA)) +
-    geom_hline(aes(yintercept = 0)) +
-    geom_ribbon(aes(ymin = PCA.lower, ymax = PCA.upper), fill = "steelblue", alpha = 0.125) +
-    geom_line(colour = "red", linetype = "dashed") +
-    scale_x_continuous(breaks = seq(0, 60, by = 5)) +
-    scale_y_continuous(breaks = seq(20, -40, by = -5)) +
-    labs(
-      caption = "Source: Own calculations",
-      x = "Months after the shock",
-      y = "Impact on employment"
-    )
-```
-
+\clearpage
 
 # References
